# audio-transcriber

./: Cargo.toml  File Listing: `download_ggml_model.rs  LICENSE  README.md  download_ggml_model.rs
.github/workflows/: rust.yml
src/: download_ggml_model.rs  main.rs
